# patterns

./: pyproject.toml
composite/: composite.py
strategy/: better_implementation_strategy.py  strategy.py
